# llm-prompt-builder

./: .gitignore  AGENTS.md  CICD_ARCHITECTURE.md  CREATE_PROJECT.md  DEPLOYMENT.md  LICENSE  QUICK_START.md  README.md  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/workflows/: deploy-alt.yml  deploy.yml
docs/: ADDING_EXAMPLES.md  CONTRIBUTING.md  DEPLOYMENT.md
public/: _headers
src/: App.tsx  index.css  main.tsx
src/components/: Block.tsx  BlockPicker.tsx  BuilderPanel.tsx  Button.test.tsx  Button.tsx  ErrorBoundary.tsx  FormatSelector.tsx  Header.tsx  Icons.tsx  OutputPanel.tsx  SimpleItem.tsx  Toast.tsx  index.ts
src/constants/: index.ts
src/data/: blockDefs.ts  examples.ts  index.ts  models.ts
src/hooks/: index.ts  useFileOperations.ts  useModelSelection.ts  useNodeOperations.ts  useSessionStorage.ts  useWasm.ts
src/types/: index.ts
src/utils/: formatters.test.ts  formatters.ts  index.ts  moduleLoader.ts  nodeOperations.ts  prism.ts  storage.ts  uuid.ts  validation.test.ts  validation.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
